--- a/Add.css
+++ b/Add.css
@@ -14,3 +14,34 @@
     font-size: large;
 }
 
+.header{
+    
+    margin-top:  10px;
+    padding-top: 10px;
+    text-align: center;
+    font-weight: bolder;
+    font-size: 20px;
+    color: rgb(0, 0, 0);
+}
+.steps{
+
+    text-align: center;
+    font-size: medium;
+}
+.box{
+    margin-top: 0px;
+    padding-top: -20px;
+    margin-left: 80px;
+  }
+.btn-box {
+    margin-left: 10px;
+    width: 200px;
+    display: inline-block;
+  }
+  .ml10 {
+    margin-left: 10px;
+  }
+  .mr10 {
+    margin-right: 10px;
+  }
+
