--- a/Navigation.css
+++ b/Navigation.css
@@ -5,23 +5,17 @@
   }
   
   
-h2{
-    font-size: larger;
-    margin-left: 150px;
-    text-align: center;
-    color: white;
-    
-  }
-
 .container{
   font-weight: bold;
   color: rgb(255, 255, 255);
   text-align: center;
   }
 
-.header{
-  font-weight: bold;
+h2{
+  font-weight: 200;
   color: rgb(255, 255, 255);
   text-align: center;
+  margin-left: 150px;
+  
 }
   
