--- a/Add.css
+++ b/Add.css
@@ -1,6 +1,8 @@
 form{
   text-align: center;
 }
+
+ 
 label{
   margin-right: 50px;
 }
@@ -8,7 +10,7 @@ label{
     text-align: center;
     margin-top: 0px;
     padding-top: 10px;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
 }
 .title{
   font-size: medium;
@@ -29,7 +31,7 @@ h3{
     text-align: center;
     font-weight: 100;
     font-size: 20px;
-    color: rgb(58, 57, 57);
+    color: rgb(255, 123, 0);;
 }
 
 h5{
@@ -43,7 +45,6 @@ input{margin-right: 20px;
       padding-right: 20px;}
 
 .brewer{
-  font-size: small;
   margin-top: 5px;
   margin-bottom: 10px;
 }
@@ -57,14 +58,15 @@ input{margin-right: 20px;
 }
 
 .header{
-  margin-top: 10px;
+  margin-top: 0px;
   margin-bottom: 10px;
   font-size: 25px;
   font-weight: bold;
 }
 
 .steps{
-
+     margin-top: -10px;
+     padding-top: -10px;;
     text-align: center;
     font-size: medium;
 }
